# sensor-hub

./: .coverage  .gitignore  MANAGEMENT.md  README.md  collect_data.py  data_collector.py  debug_sensor.html  desktop_setup.sh  pyproject.toml  pytest.ini  quick_start.sh  run_tests.sh  sensor_hub.db  sensor_hub.sh  start_sensor_hub.sh  status.sh  stop_sensor_hub.sh  stop_services.sh  systemd_setup.sh  test_ltr329.py  test_ltr329_hardware.py  test_ltr329_registry.py  test_ltr329_simple.py
desktop/: sensor-hub-dashboard.desktop  sensor-hub-start.desktop  sensor-hub-status.desktop  sensor-hub-stop.desktop
migrations/versions/: 18e1952699e5_add_ir_level_column_to_sensor_readings.py  69ede00f27ea_initial_migration.py
src/sensor_hub/: __init__.py  api.py  app.py  cli.py  config.py  database.py  discovery_service.py  logging_config.py  routes.py  sensor_registry.py
src/sensor_hub/models/: __init__.py
src/sensor_hub/sensors/: __init__.py  bme280.py  ltr329.py  mpu6050.py
src/sensor_hub/static/: debug2.html
src/sensor_hub/static/css/: main.css
src/sensor_hub/static/js/: main.js
src/sensor_hub/templates/: base.html  dashboard.html  error.html  index.html  sensor_detail.html  status.html
systemd/: sensor-hub-scheduler.service  sensor-hub-webapp.service
tests/: __init__.py  conftest.py  factories.py
tests/integration/: test_full_workflow.py
tests/unit/: test_api.py  test_models.py  test_sensors.py
